--- a/res/layout/simplebase.xml
+++ b/res/layout/simplebase.xml
@@ -1,14 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".SimpleBaseActivity" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="fill_horizontal"
+    tools:context=".BaseActivity" >
 
 </RelativeLayout>
